# plover_svg_layout_display

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
plover_svg_layout_display/: config_ui.py  layout_config.py  layout_ui.py  qt_utils.py  svg_parser.py  svg_widget.py
plover_svg_layout_display/resources/: en_convert.py  resources.qrc
