[metadata]
name = plover-svg-layout-display
version = 0.0.1
description = SVG-based layout display plugin for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaoffie
author_email = kaoffie@gmail.com
url = https://github.com/Kaoffie/plover_svg_layout_display
license = MIT License (MIT)
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover >= 4.0.0.dev10
    lxml >= 4.9.0
packages = 
    plover_svg_layout_display

[options.entry_points]
plover.gui.qt.tool =
  svg_layout_display = plover_svg_layout_display.layout_ui:SVGLayoutDisplayTool
